--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,15 @@ inquirer = "==2.7.0"
 black = "^20.8b1"
 poethepoet = "^0.9.0"
 
+[tool.poe.tasks]
+# use `poetry run poe <task>` to run these...
+# NOTE: using TOML inline table syntax. If you want a multi-line table you should do:
+## mytask.cmd = "abc"
+## mytask.help = "def"
+lint = { cmd = "black --check --line-length 120 *.py", help = "Use `black` to check the style of the application" }
+lint-fix = { cmd = "black --line-length 120 *.py", help = "Same as `lint`, but will fix the application's style to conform with PEP8" }
+main = { cmd = "python ./ec2-tmux-cssh.py", help = "Run ec2-tmux-cssh.py" }
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
