--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-boto3 = "==1.16.43"
-inquirer = "==2.7.0"
+boto3 = "^1.16.43"
+inquirer = "^2.7.0"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
